<resources>
    <string name="app_name">MoPTu</string>
    <string name="bar_name">Tourist Guide</string>
    <string name="home_icon">Home</string>
    <string name="places_icon">Places</string>
    <string name="comment_icon">Comment</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_article_one">    If you are a tourist, have a lot of free time and are in excellent health, you have found the right place!</string>
    <string name="welcome_article_two">    It is for you that we have found places for your interest. Because you are the ones who get a lot of pleasure from such really wonderful divine wonders of nature!</string>
    <string name="welcome_article_three">On this page you will find some of the best landscapes of our planet Earth!</string>
    <string name="welcome_comment">Your comments and ratings</string>
    <string name="welcome_dscr">Welcome Image</string>
    <string name="comment_section">Comment Section</string>
    <string name="name_edit">» Name</string>
    <string name="email_edit">» Email</string>
    <string name="comment_edit">» Your comment</string>
    <string name="star_rating">"Star Raiting "</string>
    <string name="button_send">SEND</string>
    <string name="landscape_place">Landscape place</string>
</resources>